# flying-wing-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bounds_overrides.yaml  default_design.yaml  normalization.yaml  objective_weights.yaml
flyingwing/: _overrides.py  config.py
flyingwing/analysis/: aero_3d.py  airfoil_2d.py  structures.py
flyingwing/geometry/: aircraft.py  airfoil_family.py  constraints.py  export.py  fuselage.py  mesh.py  params.py  params_io.py  spanwise.py
flyingwing/gui/: analysis_tab.py  app.py  config_tab.py  design_tab.py  docs_tab.py  numeric.py  results_io.py  results_tab.py  run_manager.py  run_tab.py
flyingwing/objective/: cg.py  mass.py  metrics.py  objective.py  performance.py
flyingwing/optimization/: auto_tune.py  base.py  cmaes.py  cycle.py  hierarchical.py  stage1.py  stage2.py  vector.py
flyingwing/viz/: aero_plots.py  analysis_plots.py  flow_plots.py  geometry_plots.py  optimization_plots.py  structures_plots.py
scripts/: run_gui.py  run_multi_cycle.py  run_stage1.py  run_stage2.py
