[project]
name = "flyingwing"
version = "0.1.0"
description = "Automated design and optimization framework for a high-performance FPV flying wing"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "dash",
    "aerosandbox",
    "neuralfoil",
    "matplotlib",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flyingwing*"]
